altered styling incl. fixed poster alignment

--- a/front_end/src/pages/Wishlist.css
+++ b/front_end/src/pages/Wishlist.css
@@ -17,8 +17,8 @@
     letter-spacing: -1px; 
     line-height: 1; 
     text-align: left;
-    margin-block-start: 5%;
-    margin-block-end: 5%;
+    margin-block-start: 2.5%;
+    margin-block-end: 2.5%;
     text-shadow: -1px -1px 0 rgb(172, 172, 172), 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
@@ -70,13 +70,13 @@
     text-shadow: -1px -1px 0 rgb(172, 172, 172), 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-.wishlist_poster_image{
+.wishlist_poster_image > img{
     height: 500px;
     width: 320px;
     background-color: #46CBB1;
     position: absolute;
     border-radius: 15px;
-    object-fit: cover;
+    object-fit: fill;
     opacity: 1;
     overflow: hidden;
 }
